--- a/src/settings.json
+++ b/src/settings.json
@@ -1,19 +1,29 @@
 {
   "appDetails": {
     "appName": "dps",
-    "supportEmail": "support@example.com",
-    "supportNumber": "+923001234567"
+    "supportEmail": "example@company.com",
+    "supportNumber": "+923001234567",
+    "displayUsername": "PTA HQ",
+    "role": "dps_authority"
+  },
+  "keycloak": {
+    "host": "http://SERVER_IP",
+    "port": "PORT_NUMBER",
+    "version": "VERSION_OR_SUBPATH",
+    "clientId": "CLIENT_ID",
+    "realm": "REALM",
+    "use": false
   },
   "api": {
     "host": "http://SERVER_IP",
     "port": "PORT_NUMBER",
     "version": "VERSION_OR_SUBPATH",
-    "use": false
+    "use": true
   },
   "apiman": {
     "host": "http://SERVER_IP",
     "port": "PORT_NUMBER",
     "clientId": "VERSION_OR_SUBPATH",
-    "use": true
+    "use": false
   }
 }
