--- a/src/settings-template.json
+++ b/src/settings-template.json
@@ -18,13 +18,11 @@
     "use": true
   },
   "keycloak": {
-    "realm": "dirbs",
-    "url": "http://SERVER_IP",
+    "host": "http://SERVER_IP",
     "port": "PORT_NUMBER",
-    "version": "VERSION",
-    "ssl-required": "external",
-    "clientId": "sso",
-    "use": true,
-    "use-resource-role-mappings": true
+    "version": "VERSION_OR_SUBPATH",
+    "clientId": "CLIENT_ID",
+    "realm": "REALM",
+    "use": true
   }
 }
