--- a/package.json
+++ b/package.json
@@ -13,20 +13,18 @@
     "axios": "^0.18.0",
     "base-64": "^0.1.0",
     "bootstrap": "^4.1.1",
-    "file-saver": "^2.0.0-rc.4",
     "font-awesome": "4.7.0",
+    "file-saver": "^2.0.0-rc.4",
     "formik": "^0.11.11",
     "i18next": "^11.3.6",
     "i18next-browser-languagedetector": "^2.2.2",
-    "jest-localstorage-mock": "^2.3.0",
     "jwt-decode": "^2.2.0",
     "keycloak-js": "^4.1.0",
-    "node-sass": "^4.9.4",
     "ramda": "^0.25.0",
+    "node-sass": "^4.9.4",
     "react": "^16.6.0",
     "react-content-loader": "^3.1.2",
     "react-dom": "^16.6.0",
-    "react-helmet": "^5.2.0",
     "react-i18next": "^7.8.1",
     "react-js-pagination": "^3.0.2",
     "react-router-dom": "4.2.2",
@@ -35,9 +33,9 @@
     "react-toastify": "^4.1.0",
     "react-transition-group": "2.2.1",
     "reactstrap": "^6.5.0",
+    "jest-localstorage-mock": "^2.3.0",
     "sinon": "^7.1.1",
-    "sweetalert2": "^8.11.1",
-    "sweetalert2-react-content": "^1.1.0"
+    "react-helmet": "^5.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
