--- a/src/settings.json
+++ b/src/settings.json
@@ -2,8 +2,7 @@
   "appDetails": {
     "appName": "dps",
     "supportEmail": "support@example.com",
-    "supportNumber": "+923001234567",
-    "defaultLanguage": "en"
+    "supportNumber": "+923001234567"
   },
   "api": {
     "host": "http://SERVER_IP",
@@ -14,15 +13,7 @@
   "apiman": {
     "host": "http://SERVER_IP",
     "port": "PORT_NUMBER",
-    "clientId": "/apiman-gateway/DIRBS/dps/1.0",
-    "use": true
-  },
-  "keycloak": {
-    "host": "http://SERVER_IP",
-    "port": "PORT_NUMBER",
-    "version": "VERSION_OR_SUBPATH",
-    "clientId": "CLIENT_ID",
-    "realm": "REALM",
+    "clientId": "VERSION_OR_SUBPATH",
     "use": true
   }
 }
