--- a/src/settings.json
+++ b/src/settings.json
@@ -1,29 +1,19 @@
 {
   "appDetails": {
     "appName": "dps",
-    "supportEmail": "example@company.com",
-    "supportNumber": "+923001234567",
-    "displayUsername": "PTA HQ",
-    "role": "dps_authority"
-  },
-  "keycloak": {
-    "host": "http://SERVER_IP",
-    "port": "PORT_NUMBER",
-    "version": "VERSION_OR_SUBPATH",
-    "clientId": "CLIENT_ID",
-    "realm": "REALM",
-    "use": false
+    "supportEmail": "support@example.com",
+    "supportNumber": "+923001234567"
   },
   "api": {
     "host": "http://SERVER_IP",
     "port": "PORT_NUMBER",
     "version": "VERSION_OR_SUBPATH",
-    "use": true
+    "use": false
   },
   "apiman": {
     "host": "http://SERVER_IP",
     "port": "PORT_NUMBER",
     "clientId": "VERSION_OR_SUBPATH",
-    "use": false
+    "use": true
   }
 }
